fix search bar on mobile

--- a/app/assets/stylesheets/styles.scss
+++ b/app/assets/stylesheets/styles.scss
@@ -65,8 +65,10 @@
   width: 70% !important;
 }
 
-.main-search-bar {
-  width: 60% !important;
+@media only screen and (min-width: 600px) {
+  .main-search-bar {
+    width: 60% !important;
+  }
 }
 
 @media only screen and (max-width: 600px) {
